--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "nextjs-progressbar": "^0.0.16",
     "notistack": "^3.0.1",
     "react": "18.2.0",
