--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nextjs-progressbar": "^0.0.16",
     "notistack": "^3.0.1",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
